Fixed css, alignment, wording issues

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -24,6 +24,7 @@
     background: transparent linear-gradient(241deg, #009798 0%, #002e2e 100%) 0% 0% no-repeat padding-box;
     overflow: hidden;
     z-index: 9;
+   padding-left: 40px;
 }
 @media only screen and (max-width: 991px) {
     .banner-section {
@@ -42,6 +43,7 @@
     position: absolute;
     top: 6%;
     left: -5px;
+    margin-left: 40px;
 }
 
 @media only screen and (max-width: 400px) {
@@ -239,7 +241,7 @@
 
 .modal-footer .btn{
     border-radius: 5px;
-    background-color: #004141;
+    background-color: #009798;
 }
 .modal-footer .btn:hover{
     background-color: #003030;
@@ -1074,7 +1076,7 @@
   .project-slider-area .slider-next, .slider-prev {
     width: 40px;
     height: 40px;
-    line-height: 40px;
+    line-height: 44px;
     font-size: 22px;
     background: linear-gradient(90deg, rgba(0,134,135,1) 0%, rgba(125,233,248,1) 96%);
     border-radius: 6px;
@@ -1414,18 +1416,9 @@
     margin-bottom: 0;
     color: #009798;
     text-transform: uppercase;
-    position: relative;
 }
 
-.client-footer .client-footer-user-content .title::after {
-    position: absolute;
-    content: "";
-    top: 10px;
-    right: 0;
-    width: 30px;
-    height: 1px;
-    background-color: #009798;
-}
+
 
 @media only screen and (max-width: 991px) {
     .client-footer .client-footer-user-content .title::after {
@@ -4057,3 +4050,85 @@ form h4 {
 /*--------------------------------------------------------------
  [ ## Footer end ]
 --------------------------------------------------------------*/
+
+
+.direction{
+    text-align: center;
+}
+.direction button{
+    font-family: cursive;
+    font-weight: bold;
+    background-color: #009798;
+    border:none;
+    width:40px;
+    height:40px;
+    border-radius: 50%;
+    transition: 0.5s;
+    margin:0 10px;
+}
+.direction button:hover{
+    background-color: #005457;
+}
+.item{
+    border-radius: 20px;
+    width:300px;
+    height:397px;
+    background-color:transparent;
+    overflow: hidden;
+    transition: 0.5s;
+    margin:10px;
+    scroll-snap-align: start;
+}
+.item .avatar{
+    display: block;
+    object-fit: cover;
+    border-radius: 20px;
+    /* box-shadow: 0 10px 15px #7e878d; */
+}
+/* .item .content{
+    padding:30px;
+    font-family: monospace;
+}
+.item .content table td{
+    padding:10px 0;
+    border-bottom: 1px solid #AEC0CE;
+}
+.item .content table td:nth-child(2){
+    text-align: right;
+}
+.item .nameGroup{
+    text-align: center;
+    border-bottom:none!important;
+} */
+#list{
+    display: flex;
+    width:max-content;
+}
+#formList{
+    width:1280px;
+    max-width: 100%;
+    overflow: auto;
+    margin:100px auto 50px;
+    scroll-behavior: smooth;
+    scroll-snap-type: both;
+}
+#formList::-webkit-scrollbar{
+    display: none;
+}
+@media screen and (max-width: 1024px){
+    .item{
+        width: calc(33.3vw - 20px);
+    }
+    .direction{
+        display: none;
+    }
+}
+@media screen and (max-width: 768px){
+    .item{
+        width: calc(50vw - 20px);
+    }
+    .direction{
+        display: none;
+    }
+}
+  
